# ToposAI

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SORUNLAR.md  adversarial_robustness_benchmark.py  ai_generated_fast_kernel.py  app.py  axiomatic_flaws_proof.py  babi_logic_benchmark.py  benchmark_sota.py  build_topos_framework.py  chat_custom_llm.py  curry_howard_lambek_prover.py  deep_math_flaws_proof.py  deep_monad_poly_proof.py  deep_optics_proof.py  deep_topology_flaws.py  deep_topos_proofs.py  dynamic_ontology_nlp.py  emergence_cellular_topos.py  fix_standalone_imports.py  fix_unicode.py  fixed_architecture_proofs.py  flash_topos.py  flash_topos_fixed.py  fractal_holographic_topos.py  grothendieck_topos_continuous.py  hofstadter_topoi_sentience.py  hott_concept_bender.py  integration_test.py  knot_theory_untangler.py  langlands_program_primes_geometry.py  large_scale_proof.py  mkdocs.yml  (+36 more)
applications/: __init__.py  app.py  categorical_cybernetics_pricing.py  categorical_kan_extensions_transfer_learning.py  distributed_fraud_cohomology.py  dynamic_ontology_nlp.py  generative_universal_grammar_topos.py  homotopic_model_merging.py  kaggle_orbit_wars_2500_elo.py  kaggle_orbit_wars_grandmaster.py  kaggle_orbit_wars_topos_agent.py  real_world_astrophysics_topos.py  real_world_bioinformatics_ppi.py  real_world_bitcoin_topos_alpha.py  real_world_climate_teleconnections.py  real_world_epidemiology_topos.py  real_world_finance_topos.py  real_world_huggingface_sheaf_streaming.py  real_world_legal_topos.py  real_world_medical_fact_checker.py  real_world_neuroscience_connectome.py  real_world_nltk_wordnet_topos.py  real_world_predictive_coding_finance.py  real_world_seismic_topos.py  real_world_solidity_auditor.py  real_world_topological_arbitrage.py  real_world_topological_mev_bot.py  real_world_topological_pairs_trading.py  real_world_topological_recommendation.py  real_world_topos_llm_pretraining.py  real_world_true_binance_backtest.py  real_world_wikidata_topos_reasoning.py  semantic_universal_grammar_topos.py  tda_persistent_homology_mri.py  the_true_agi_omni_brain.py  topological_babel_fish.py  topological_chess_engine.py  topological_crypto_breaker.py  topological_reinforcement_learning_tictactoe.py  topos_huggingface_adapter.py  (+7 more)
benchmarks/: __init__.py  adversarial_robustness_benchmark.py  babi_logic_benchmark.py  benchmark_sota.py  big_data_infinite_context_mamba.py  flash_topos_backward_benchmark.py  gnn_vs_topos_benchmark.py  mamba_vs_attention_benchmark.py  real_world_needle_in_haystack.py  real_world_ontology_benchmark.py  research_benchmark_yoneda_hierarchy.py  scaling_laws_benchmark.py
checkpoints/: topos_model_iter_500.pt
docs/: ADAPTED_EXPERIMENTS.md  BENCHMARKS.md  MATH_CONTRACTS.md  PROJECT_STATUS.md  PUBLIC_API.md  (+3 more)
(+195 files in other folders)
